--- a/reef-frontend/package.json
+++ b/reef-frontend/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@craco/craco": "^6.3.0",
     "@polkadot/extension-dapp": "^0.40.3",
+    "@polkadot/rpc-provider": "^6.5.2",
+    "@polkadot/ui-keyring": "^0.86.2",
+    "@reef-defi/evm-provider": "^1.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
