--- a/reef-frontend/package.json
+++ b/reef-frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.0",
+    "@pinata/sdk": "^1.1.23",
     "@polkadot/extension-dapp": "^0.40.3",
     "@polkadot/rpc-provider": "^6.5.2",
     "@polkadot/ui-keyring": "^0.86.2",
@@ -11,11 +12,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "craco": "0.0.3",
+    "fs": "^0.0.1-security",
+    "ipfs-http-client": "^53.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "tr-alerts": "^0.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
