--- a/reef-frontend/package.json
+++ b/reef-frontend/package.json
@@ -10,6 +10,7 @@
     "@polkadot/rpc-provider": "^6.5.2",
     "@polkadot/ui-keyring": "^0.86.2",
     "@reef-defi/evm-provider": "^1.0.2",
+    "@tailwindcss/forms": "^0.3.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
